# AIr-Force

./: .gitignore  README.md  criar_banco.py  csv_conversor.py  html1_conversor.py  html2_conversor.py  json_conversor.py  pyproject.toml  requirements.txt  xml_conversor.py  zExtractor.py  zExtractor_DB.py  zzzzzzzz.py
data/: dados_csv.csv
expected/: csv.json  html1.json  html2.json  json.json  xml.json
output/: csv_output.json  dados_html1_output.json  dados_json_output.json  dados_xml_output.json  html1_output.json  html2_output.json  json_output.json  vdb_dados_html1_output1.json  vdb_dados_html1_output2.json  xml_output.json
prompts/: prompts.py
schema/: csv_schema.py  html1_schema.py  html2_schema.py  json_schema.py  xml_schema.py
utils/: loaders.py
